--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -76,3 +76,10 @@
     font-weight: 100 200 300 400 500 600 700 800 900;
     font-display: swap;
 }
+
+@font-face {
+    font-family: 'EBGaramond';
+    src: url('/fonts/eb_garamond/EBGaramond-VariableFont_wght.ttf') format('truetype');
+    font-weight: 400 500 600 700 800;
+    font-display: swap;
+}
