--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -78,8 +78,155 @@
 }
 
 @font-face {
-    font-family: 'EBGaramond';
-    src: url('/fonts/eb_garamond/EBGaramond-VariableFont_wght.ttf') format('truetype');
-    font-weight: 400 500 600 700 800;
+    font-family: 'SourceCodePro';
+    src: url('/fonts/source_code_pro/SourceCodePro.ttf') format('truetype');
+    font-weight: 200 300 400 500 600 700 800 900;
     font-display: swap;
+}
+
+@font-face {
+    font-family: 'SourceCodePro';
+    src: url('/fonts/source_code_pro/SourceCodeProItalic.ttf');
+    font-weight: 200 300 400 500 600 700 800 900;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'RobotoSerif';
+    src: url('/fonts/roboto_serif/RobotoSerif.ttf') format('truetype');
+    font-weight: 200 300 400 500 600 700 800 900;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'RobotoSerif';
+    src: url('/fonts/source_code_pro/RobotoSerifItalic.ttf');
+    font-weight: 200 300 400 500 600 700 800 900;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Petrona';
+    src: url('/fonts/petrona/Petrona-Thin.ttf') format('truetype');
+    font-weight: 100;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Petrona';
+    src: url('/fonts/petrona/Petrona-ThinItalic.ttf');
+    font-weight: 100;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Petrona';
+    src: url('/fonts/petrona/Petrona-ExtraLight.ttf') format('truetype');
+    font-weight: 200;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Petrona';
+    src: url('/fonts/petrona/Petrona-ExtraLightItalic.ttf');
+    font-weight: 200;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Petrona';
+    src: url('/fonts/petrona/Petrona-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Petrona';
+    src: url('/fonts/petrona/Petrona-LightItalic.ttf');
+    font-weight: 300;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Petrona';
+    src: url('/fonts/petrona/Petrona-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Petrona';
+    src: url('/fonts/petrona/Petrona-Italic.ttf');
+    font-weight: 400;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Petrona';
+    src: url('/fonts/petrona/Petrona-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Petrona';
+    src: url('/fonts/petrona/Petrona-MediumItalic.ttf');
+    font-weight: 500;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Petrona';
+    src: url('/fonts/petrona/Petrona-SemiBold.ttf') format('truetype');
+    font-weight: 600;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Petrona';
+    src: url('/fonts/petrona/Petrona-SemiBoldItalic.ttf');
+    font-weight: 600;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Petrona';
+    src: url('/fonts/petrona/Petrona-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Petrona';
+    src: url('/fonts/petrona/Petrona-BoldItalic.ttf');
+    font-weight: 700;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Petrona';
+    src: url('/fonts/petrona/Petrona-ExtraBold.ttf') format('truetype');
+    font-weight: 800;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Petrona';
+    src: url('/fonts/petrona/Petrona-ExtraBoldItalic.ttf');
+    font-weight: 800;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Petrona';
+    src: url('/fonts/petrona/Petrona-Black.ttf') format('truetype');
+    font-weight: 900;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Petrona';
+    src: url('/fonts/petrona/Petrona-BlackItalic.ttf');
+    font-weight: 900;
+    font-style: italic;
 }
