--- a/styles/kpwags.css
+++ b/styles/kpwags.css
@@ -323,6 +323,7 @@ div.cover.about {
 }
 
 .utterances-frame {
+    margin-top: 2rem;
     position: relative;
 }
 
@@ -365,6 +366,10 @@ div.cover.about {
 
 .hidden {
     display: none;
+}
+
+.nobreak {
+    white-space: nowrap;
 }
 
 @media all and (max-width: 810px) {
