--- a/styles/kpwags.css
+++ b/styles/kpwags.css
@@ -8,7 +8,10 @@
     --black-3: hsl(0, 0%, 20%);
     --grey-1: hsl(0, 0%, 69%);
     --grey-2: hsl(0, 0%, 39%);
-    --font: WorkSans, Helvetica, Arial, sans-serif;
+    --sans-serif: WorkSans, Helvetica, Arial, sans-serif;
+    --serif: Petrona, Georgia, 'Times New Roman', serif;
+    --monospaced: SourceCodePro, 'Courier New';
+    --font: var(--sans-serif);
     --primary-color-1: hsl(144, 100%, 15%);
     --primary-color-2: rgb(24, 124, 61);
     --primary-color-3: hsl(124, 95%, 32%);
@@ -18,6 +21,11 @@
     --photoset-list-hover-bg: var(--grey-1);
     --display-light-mode: inline;
     --display-dark-mode: none;
+    --primary-color-red: rgb(212, 34, 34);
+    --primary-color-orange: hsl(30, 100%, 33%);
+    --primary-color-green: hsl(144, 100%, 15%);
+    --primary-color-blue: rgb(28, 55, 189);
+    --primary-color-purple: hsl(301, 91%, 40%);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -31,6 +39,11 @@
         --photoset-list-hover-bg: hsl(0, 0%, 15%);
         --display-light-mode: none;
         --display-dark-mode: inline;
+        --primary-color-red: hsl(0 100% 67%);
+        --primary-color-orange: hsl(30, 100%, 33%);
+        --primary-color-green: hsl(144, 100%, 15%);
+        --primary-color-blue: rgb(28, 55, 189);
+        --primary-color-purple: hsl(301, 91%, 40%);
     }
 }
 
@@ -44,6 +57,11 @@
     --photoset-list-hover-bg: hsl(0, 0%, 15%);
     --display-light-mode: none;
     --display-dark-mode: inline;
+    --primary-color-red: rgb(212, 34, 34);
+    --primary-color-orange: hsl(30, 79%, 46%);
+    --primary-color-green: hsl(124, 95%, 38%);
+    --primary-color-blue: hsl(213 100% 66%);
+    --primary-color-purple: hsl(301, 99%, 65%);
 }
 
 [data-theme*='light'] {
@@ -65,48 +83,83 @@
     --photoset-list-hover-bg: var(--grey-1);
     --display-light-mode: inline;
     --display-dark-mode: none;
+    --primary-color-red: hsl(0 100% 67%);
+    --primary-color-orange: hsl(30, 100%, 33%);
+    --primary-color-green: hsl(144, 100%, 15%);
+    --primary-color-blue: rgb(28, 55, 189);
+    --primary-color-purple: hsl(301, 91%, 40%);
 }
 
-[data-theme*='green'] {
-    --primary-color-1: hsl(144, 100%, 15%);
-    --primary-color-2: rgb(24, 124, 61);
+[data-theme*='dark'][data-color-theme*='green'] {
+    --primary-color-1: hsl(124, 95%, 38%);
+    --primary-color-2: hsl(124, 100%, 40%);
     --primary-color-3: hsl(124, 95%, 32%);
 }
 
-[data-theme*='purple'] {
-    --primary-color-1: rgb(225, 0, 222);
-    --primary-color-2: rgb(189, 23, 186);
-    --primary-color-3: hsl(298, 70%, 45%);
+[data-color-theme*='green'] {
+    --primary-color-1: hsl(144, 100%, 15%);
+    --primary-color-2: hsl(142, 68%, 29%);
+    --primary-color-3: hsl(124, 95%, 32%);
 }
 
-[data-theme*='blue'] {
-    --primary-color-1: rgb(0, 101, 225);
-    --primary-color-2: rgb(70, 97, 230);
+[data-color-theme*='purple'] {
+    --primary-color-1: hsl(301, 91%, 40%);
+    --primary-color-2: rgb(208, 27, 205);
+    --primary-color-3: rgb(178, 0, 184);
+}
+
+[data-theme*='dark'][data-color-theme*='purple'] {
+    --primary-color-1: hsl(301, 99%, 65%);
+    --primary-color-2: hsl(301 72% 61%);
+    --primary-color-3: hsl(298 100% 79%);
+}
+
+[data-color-theme*='blue'] {
+    --primary-color-1: rgb(28, 55, 189);
+    --primary-color-2: rgb(42, 69, 205);
+    --primary-color-3: hsl(223, 69%, 43%);
+}
+
+[data-theme*='dark'][data-color-theme*='blue'] {
+    --primary-color-1: hsl(213 100% 66%);
+    --primary-color-2: hsl(230 100% 67%);
     --primary-color-3: hsl(223, 79%, 57%);
 }
 
-[data-theme*='orange'] {
-    --primary-color-1: rgb(212, 118, 25);
-    --primary-color-2: rgb(213, 136, 43);
+[data-color-theme*='orange'] {
+    --primary-color-1: hsl(30, 100%, 33%);
+    --primary-color-2: hsl(33, 89%, 40%);
     --primary-color-3: hsl(17, 95%, 60%);
 }
 
-[data-theme*='red'] {
-    --primary-color-1: rgb(250, 55, 55);
-    --primary-color-2: rgb(214, 69, 69);
-    --primary-color-3: hsl(0, 96%, 52%);
+[data-theme*='dark'][data-color-theme*='orange'] {
+    --primary-color-1: hsl(30, 79%, 46%);
+    --primary-color-2: hsl(33, 67%, 50%);
+    --primary-color-3: hsl(17, 95%, 60%);
 }
 
-[data-theme*='sansserif'] {
-    --font: WorkSans, Helvetica, Arial, sans-serif;
+[data-color-theme*='red'] {
+    --primary-color-1: rgb(212, 34, 34);
+    --primary-color-2: hsl(0, 77%, 51%);
+    --primary-color-3: hsl(0, 65%, 24%);
 }
 
-[data-theme*='serif'] {
-    --font: Petrona, Georgia, 'Times New Roman', serif;
+[data-theme*='dark'][data-color-theme*='red'] {
+    --primary-color-1: hsl(0 100% 67%);
+    --primary-color-2: hsl(0, 64%, 55%);
+    --primary-color-3: hsl(0, 82%, 71%);
 }
 
-[data-theme*='mono'] {
-    --font: SourceCodePro, 'Courier New'
+[data-color-theme*='sansserif'] {
+    --font: var(--sans-serif);
+}
+
+[data-font-theme*='serif'] {
+    --font: var(--serif);
+}
+
+[data-font-theme*='mono'] {
+    --font: var(--monospaced);
 }
 
 /* --- CSS Reset --- */
