Added a Class to Widen Certain Pages
Added a new CSS class for `main` to widen:
- Bookshelf
- Movies
- Video Games
- Podcasts

Closes #319

--- a/styles/kpwags.css
+++ b/styles/kpwags.css
@@ -224,6 +224,10 @@ main {
     max-width: 100%;
 }
 
+main.wide {
+    width: min(150ch, 100vw - 2rem);
+}
+
 h1 {
     font-weight: 500;
     color: var(--primary-color-1);
