--- a/styles/kpwags.css
+++ b/styles/kpwags.css
@@ -301,6 +301,157 @@ div.cover.about {
     margin: 0.75rem 0 1.5rem;
 }
 
+/* HEADER */
+header {
+    height: 60px;
+    line-height: 60px;
+    margin: 0;
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+}
+
+header .site-title {
+    padding: 0 25px 0 10px;
+    font-weight: 900;
+}
+
+header .site-title a {
+    color: var(--primary-color-1);
+    font-weight: 400;
+    font-size: 1.7rem;
+    letter-spacing: 0.08rem;
+    white-space: nowrap;
+}
+
+header .site-title a:hover {
+    color: var(--primary-color-2);
+    text-decoration: none;
+}
+
+header nav {
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+header nav a {
+    padding: 0 14px;
+    font-size: 1.1rem;
+    font-weight: 400;
+    color: var(--primary-color-1);
+    white-space: nowrap;
+}
+
+header nav a:visited {
+    padding: 0 14px;
+    font-size: 1.1rem;
+    font-weight: 400;
+    color: var(--primary-color-1);
+    white-space: nowrap;
+}
+
+header nav a:hover {
+    color: var(--primary-color-2);
+    text-decoration: none;
+}
+
+header nav a svg path {
+    fill: var(--primary-color-2)
+}
+
+header nav a svg#rss-svg {
+    max-height: 1.2rem;
+    max-width: 1.2rem;
+    vertical-align: middle;
+    display: inline;
+}
+
+header nav a svg#rss-svg path {
+    fill: var(--primary-color-1);
+}
+
+.sticky-toggle {
+    display: none;
+    position: absolute;
+    top: 10px;
+    right: 0px;
+}
+
+@media (max-width: 850px) {
+    header {
+        line-height: 1.5;
+        padding: 10px 0;
+        height: auto;
+        text-align: center;
+        margin-bottom: 0;
+        display: block;
+    }
+
+    header #normal-switch {
+        display: none;
+    }
+
+    header .hide-on-tablet {
+        display: none;
+    }
+
+    header nav a {
+        padding: 0 10px;
+    }
+
+    .sticky-toggle {
+        display: block;
+    }
+}
+
+@media (max-width: 809px) {
+    header .site-title {
+        margin-bottom: 15px;
+        padding: 0 10px;
+    }
+
+    header nav {
+        justify-content: center;
+    }
+}
+
+@media all and (max-width: 450px) {
+    header nav .search-icon {
+        display: none;
+    }
+}
+
+/* END HEADER */
+
+/* FOOTER */
+footer {
+    margin: 6rem 0 3rem;
+    padding-top: 1.4rem;
+    text-align: center;
+    border-top: 1px solid var(--grey-1);
+}
+
+footer ul {
+    margin-bottom: 1rem;
+}
+
+footer ul li {
+    list-style-type: none;
+    display: inline-block;
+    padding: 0.25rem 1rem;
+}
+
+footer span.copyright {
+    font-size: 1rem;
+    font-style: italic;
+}
+
+/* END FOOTER */
+
 .twitter-tweet-rendered {
     margin: 30px auto !important;
 }
