--- a/components/PostListing/PostListing.module.css
+++ b/components/PostListing/PostListing.module.css
@@ -11,7 +11,7 @@
 }
 
 .metadata {
-    margin: 5px 0;
+    margin: 0.4rem 0 0.8rem;
     font-style: italic;
     color: var(--meta);
     font-size: 1.1rem
