Improved Stats Logic
Improved the stats logic flow and converted all `reading list` tags to `reading log` for uniformity.

--- a/components/MostPopularTagsChart/MostPopularTagsChart.module.css
+++ b/components/MostPopularTagsChart/MostPopularTagsChart.module.css
@@ -24,7 +24,7 @@
     padding: 0;
 }
 
-.barTitle .mobile {
+.mobileStats {
     display: none;
 }
 
@@ -56,7 +56,7 @@
         display: none;
     }
 
-    .barTitle .mobile {
+    .mobileStats {
         display: inline;
     }
 }
