--- a/components/PostsPerYearChart/PostsPerYearCharts.module.css
+++ b/components/PostsPerYearChart/PostsPerYearCharts.module.css
@@ -24,7 +24,7 @@
     padding: 0;
 }
 
-.barTitle .mobile {
+.mobileStats {
     display: none;
 }
 
@@ -48,7 +48,7 @@
         display: none;
     }
 
-    .barTitle .mobile {
+    .mobileStats {
         display: inline;
     }
 }
