--- a/components/Welcome/Welcome.module.css
+++ b/components/Welcome/Welcome.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     padding: 40px 25px;
     margin: 3rem 0;
-    color: var(--text);
+    color: var(--primary-color-2);
     font-size: 2rem;
 }
 
