Redesigned the Header
Redesigned the header, taken from Astro build

Closes #369

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -1,113 +1,77 @@
 .header {
     height: 60px;
-    line-height: 60px;
-    margin: 0;
-    display: grid;
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+    display: flex;
+    justify-content: space-between;
+    padding: 15px;
 }
 
-.siteTitle {
-    padding: 0 25px 0 10px;
-    font-weight: 900;
+.container {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 2rem;
 }
 
-.siteTitle a {
-    color: var(--primary-color-1);
-    font-weight: 400;
-    font-size: 1.7rem;
-    letter-spacing: 0.08rem;
-    white-space: nowrap;
+.logo {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
 }
 
-.siteTitle a:hover {
-    color: var(--primary-color-2);
+.logo img {
+    height: 36px;
+    width: 36px;
+}
+
+.logo a {
+    font-size: 1.5rem;
+    line-height: 36px;
+}
+
+.logo a:hover {
     text-decoration: none;
 }
 
 .nav {
-    display: flex;
-    width: 100%;
-    justify-content: flex-end;
-    align-items: center;
+    margin-left: 2rem;
+    font-size: 1.2rem;
 }
 
 .nav a {
-    padding: 0 14px;
-    font-size: 1.1rem;
-    font-weight: 400;
-    color: var(--primary-color-1);
-    white-space: nowrap;
+    padding-right: 1.5rem;
 }
 
-.nav a:visited {
-    padding: 0 14px;
-    font-size: 1.1rem;
-    font-weight: 400;
-    color: var(--primary-color-1);
-    white-space: nowrap;
+.config {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 1rem;
 }
 
-.nav a:hover {
-    color: var(--primary-color-2);
-    text-decoration: none;
-}
-
-.nav a svg path {
-    fill: var(--primary-color-2)
-}
-
-.stickyToggle {
+.mobileNav {
     display: none;
-    position: absolute;
-    top: 10px;
-    right: 0px;
+    margin: 1rem 0 3rem;
+    gap: 2rem;
+    justify-content: center;
+    font-size: 1.1rem;
 }
 
-@media (max-width: 767px) {
-    .header {
-        line-height: 1.5;
-        padding: 10px 0;
-        height: auto;
-        text-align: center;
-        margin-bottom: 0;
-        display: block;
-    }
-
-    .header svg.normalSwitch {
-        display: none;
-    }
-
-    .header .hide-on-tablet {
-        display: none;
-    }
-
-    .header nav a {
-        padding: 0 10px;
-    }
-
-    .stickyToggle {
-        display: block;
-    }
-
-    .normalToggle {
-        display: none;
-    }
-
-    .rss {
-        display: none;
-    }
-}
-
-@media (max-width: 767px) {
-    .siteTitle {
-        margin-bottom: 15px;
-        padding: 0 10px;
-    }
-
+@media (max-width: 880px) {
     .nav {
-        justify-content: center;
+        display: none;
+    }
+
+    .mobileNav {
+        display: flex;
+    }
+}
+
+@media (max-width: 475px) {
+    .logo img {
+        display: none;
+    }
+
+    .mobileNav a:last-child {
+        display: none;
     }
 }
