--- a/components/SearchHeaderButton/SearchHeaderButton.module.css
+++ b/components/SearchHeaderButton/SearchHeaderButton.module.css
@@ -1,22 +1,6 @@
-.searchIcon {
-    vertical-align: middle;
-    display: inline;
-    padding: 0 14px;
-}
-
-.searchIcon svg {
-    height: 1.2rem;
-    width: 1.2rem;
-    vertical-align: middle;
-    display: inline;
-}
-
-.searchIcon svg path {
-    fill: var(--primary-color-1);
-}
-
-@media all and (max-width: 450px) {
-    .searchIcon {
-        display: none;
-    }
+.searchButton {
+    display: inline-block;
+    stroke: var(--primary-color-1);
+    margin: 0 0.25rem;
+    cursor: pointer;
 }
