--- a/components/ThemeSwitchButton/ThemeSwitchButton.module.css
+++ b/components/ThemeSwitchButton/ThemeSwitchButton.module.css
@@ -1,22 +1,11 @@
 .settingsIcon {
-    vertical-align: middle;
-    display: inline;
-    padding: 0 14px;
+    cursor: pointer;
 }
 
-.settingsIcon svg {
-    height: 1.2rem;
-    width: 1.2rem;
-    vertical-align: middle;
-    display: inline;
-}
-
-.settingsIcon svg path {
+.settingsIcon path {
     fill: var(--primary-color-1);
 }
 
-@media all and (max-width: 450px) {
-    .settingsIcon {
-        display: none;
-    }
+.settingsIcon:hover path {
+    fill: var(--primary-color-2);
 }
