--- a/styles/kpwags.css
+++ b/styles/kpwags.css
@@ -231,8 +231,8 @@ main.wide {
 h1 {
     font-weight: 500;
     color: var(--primary-color-1);
-    font-size: 2.6rem;
-    margin: 2rem 0 0 0;
+    font-size: 3rem;
+    margin: 2rem 0;
     padding: 0;
 }
 
